--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,3 +11,10 @@ jobs:
     steps:
       - name: Echo Hello World
         run: echo "Hello World"
+
+  bye_world_job:
+    needs: [hello_world_job]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echo Bye World
+        run: echo "Bye World"
