--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Echo Hello World
-        run: echo "Hello World"
+        run: echo "Hello World 3"
 
   bye_world_job:
     needs: [hello_world_job]
